Added auto search styles

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
   line-height: 1.6;
   color: #3a3a3a;
   margin: 0;
-  background-color: #b6edd8;
+  background-color: white;
 }
 
 img {
@@ -20,13 +20,24 @@ img {
 /* =================================
   Base Layout Styles
 ==================================== */
-
+/*Auto Search*/
+.search {
+  text-align: center;
+  margin: 3rem 0 1rem;
+}
+#search {
+  border: 3px solid #eee;
+  width: 70%;
+  font-size: 16px;
+  border-radius: 5px;
+  padding: .5rem;
+}
 
 /*Image Gallery*/
 .grid {
   margin: 1rem auto;
   max-width: 100%;
-  padding: 3rem;
+  padding: 2rem;
   text-align: center;
 }
 
@@ -59,6 +70,9 @@ img {
   }
   .cell {
     width: calc(33.3333% - 2rem);
+  }
+  #search {
+    width: 40%;
   }
 }
 
